--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(FLTK REQUIRED)
 include_directories(${FLTK_INCLUDE_DIR})
 
-add_executable(texteditor main.cpp)
+add_executable(texteditor main.cpp utils.h)
 
 target_link_libraries(texteditor ${FLTK_LIBRARIES})
 
